--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Album Store</string>
+    <string name="album_title_hint">Album Title</string>
+    <string name="artist_hint">Artist</string>
 </resources>
