--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Album Store</string>
     <string name="album_title_hint">Album Title</string>
     <string name="artist_hint">Artist</string>
+    <string name="album_image_desc">Album icon</string>
 </resources>
