--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="album_title_hint">Album Title</string>
     <string name="artist_hint">Artist</string>
     <string name="album_image_desc">Album icon</string>
+    <string name="album_art_desc">Album Cover</string>
 </resources>
