feat(view): add "Add" button to `activity_main`

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="album_art_url_hint">Album Art (URL)</string>
     <string name="album_released_hint">Year Released</string>
     <string name="submit">Submit</string>
+    <string name="add_new_album">Add New Album</string>
 </resources>
