--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="album_released_hint">Year Released</string>
     <string name="submit">Submit</string>
     <string name="add_new_album">Add New Album</string>
+    <string name="update_submit_text">Update</string>
+    <string name="update_remove_text">Remove</string>
 </resources>
