--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Album Store</string>
+    <string name="search_hint">Search…</string>
     <string name="album_title_hint">Album Title</string>
     <string name="artist_hint">Artist</string>
     <string name="album_image_desc">Album icon</string>
