refactor: split main activity into fragment
Also add initial nav bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="add_new_album">Add New Album</string>
     <string name="update_submit_text">Update</string>
     <string name="update_remove_text">Remove</string>
+    <string name="menu_library_title">Library</string>
 </resources>
