refactor: port "Add Album" activity to fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="update_submit_text">Update</string>
     <string name="update_remove_text">Remove</string>
     <string name="menu_library_title">Library</string>
+    <string name="nav_add_album_title">Add Album</string>
 </resources>
